--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,7 +11,7 @@ $color-mustard: #fed136;
 
 body {
     font-family: $font-main;
-    }
+}
 
 .container {
     padding: 30px 0;
@@ -38,6 +38,7 @@ h2 {
     justify-content: space-between;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1;
 }
 
 .logo p {
@@ -65,7 +66,7 @@ h2 {
     line-height: 41px;
     text-align: center;
     text-transform: uppercase;
-    }
+}
 
 /* Header */
 
@@ -77,13 +78,24 @@ h2 {
     background-size: cover;
     background-attachment: fixed;
     position: relative;
+    z-index: 2;
     }
+
+.splash::after {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: $color-black;
+    opacity: 0.5;
+}
     
 .splash-inner {
     margin: auto;
     max-width: 70%;
     text-align: center;
-    }
+    z-index: 1;
+}
 
 .btn {
     color: $color-white;
@@ -99,7 +111,7 @@ h2 {
     height: 65px;
     line-height: 50px;
     margin-top: 59px;  
-    }
+}
 
 /* Portfolio */
 
