--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@ $color-white: #ffffff;
 $color-black: #000000;
 $color-light-gray: #f7f7f7;
 $color-mustard: #fed136;
+$color-text-gray: #777777;
 
 /* Global */
 
@@ -28,6 +29,29 @@ h2 {
     font-size: 75px;
     font-weight: 700;
     text-transform: uppercase;
+}
+
+h3 {
+    font-weight: 700;
+    letter-spacing: -1;
+    font-size: 40px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+h4 {
+    color: $color-text-gray;
+    font-family: $font-one;
+    font-style: italic;
+    font-size: 20px;
+    text-align: center;
+}
+
+h5 {
+    font-weight: 700;
+    letter-spacing: -0.45;
+    font-size: 18px;
+    text-align: center;
 }
 
 /* Navigation */
